fix nav overlapping when not in use

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -27,11 +27,12 @@
             height: 100vh;
             transform: scale(1, 1);
             background-color: #1B252F;
+            z-index: 1;
         }
         .nav-toggle:checked ~ nav a {
             opacity: 1;
             transition: opacity 250ms ease-in-out;
-        }
+        } 
         .nav-toggle-label {
             position: absolute;
             top: 0;
@@ -39,7 +40,7 @@
             height: 100%;
             display: flex !important;
             align-items: center;
-            z-index: 100;
+            z-index: 1;
 
             & > span,
             & > span:before,
@@ -69,6 +70,7 @@
 
     & > .header-max {
         width: 100%;
+        height: 0;
         @media (max-width: 767px) {}
         @media (min-width: 768px) {
             max-width: 1200px;
